# bobertoyin.com

./: .dockerignore  .gitattributes  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml  package-lock.json
.github/workflows/: deploy.yml
content/: _index.md  about.md  changelog.md  index.md  projects.json  projects.md
content/blog/: 2023-02-18-site-retrospective.md  2023_02_18_site_retro.md  _index.md  personal_site.md  quotes.md  random_quotes.md  redoing_my_personal_site.md  redoing_personal_site.md
content/blog/personal-site-retrospective/: index.md
content/photos/: _index.md
content/projects/: personal_site.md
graphql/hardcover/: query.graphql
sass/: style.scss
src/: error.rs  graphql.rs  main.rs  state.rs
static/: quotes.json
static/js/: init-theme.js  navburger.js  random_quote.js  reset-track.js  toggle-theme.js
static/styles/: changelog.css  main.css
templates/: 404.html  about.html  base.html  basic.html  blog-page.html  blog-post.html  blog-section.html  blog.html  blog_post.html  currently-playing.html  index.html  markdown.html  photos_folder.html  photos_home.html  project-page.html  projects.html  section.html  simple.html
templates/index_partials/: about.html  intro_card.html  posts.html  projects.html  scrobbles.html
templates/shortcodes/: about.html  image.md  quotes.html  quotes.md
