[package]
name = "bobertoyindotcom"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
gray_matter = "0.2.6"
lastfm = "0.10.0"
markdown = "1.0.0-alpha.17"
rspotify = "0.13.1"
serde = { version = "1.0.200", features = ["derive"] }
tera = "1.19.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
