[package]
name = "bobertoyindotcom"
version = "3.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3.30"
gray_matter = "0.2.6"
lastfm = "0.10.0"
markdown = "1.0.0-alpha.17"
moka = { version = "0.12.7", features = ["future"] }
octocrab = "0.38.0"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
tera = "1.19.1"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.2", features = ["fs"] }
